Modifiche
Prova di messa in produzione dopo le correzioni di alcuni componenti
